--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,7 +8,21 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to("登入", '#') %></li>
+              <% unless logged_in? %>
+                <li><%= link_to("注册", new_user_path)%></li>
+                <li><%= link_to("登入", new_session_path) %></li>
+              <% else %>
+              <li><a>Hi!, <%= current_user.username %></a></li>
+              <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        个人中心
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
+                    </ul>
+                  </li>
+              <% end %>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
