--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -20,6 +20,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
+                        <li> <%= link_to "修改密码", account_password_path %></li>
                     </ul>
                   </li>
               <% end %>
