--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -19,8 +19,11 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
-                        <li> <%= link_to "修改密码", account_password_path %></li>
+                      <% if current_user.admin? %>
+                      <li><%= link_to "Admin 后台", admin_subjects_path %></li>
+                      <% end %>
+                      <li> <%= link_to "修改密码", account_password_path %></li>
+                      <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
                     </ul>
                   </li>
               <% end %>
