--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -7,6 +7,11 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li>
+                <%= link_to("所有产品", knowledges_path) %>
+              </li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
               <% unless logged_in? %>
                 <li><%= link_to("注册", new_user_path)%></li>
@@ -20,7 +25,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <% if current_user.admin? %>
-                      <li><%= link_to "Admin 后台", admin_subjects_path %></li>
+                      <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
                       <% end %>
                       <li> <%= link_to "修改密码", account_password_path %></li>
                       <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
