--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
       <div class="container-fluid">
           <%= render "common/navbar" %>
           <%= render "common/flashes" %>
+          <%= form_tag search_knowledges_path, :method => :get do %>
+            <div class="input-group">
+              <input type="text" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
+              <span>
+                <button type="submit">
+                  <span class="glyphicon glyphicon-search"></span>
+                </button>
+              </span>
+            </div>
+          <% end %>
           <%= yield %>
       </div>
       <%= render "common/footer" %>
