implement to_learn CRUD

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -27,6 +27,7 @@
                       <% if current_user.admin? %>
                       <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
                       <% end %>
+                      <li> <%= link_to "心愿单", account_knowledges_path %></li>
                       <li> <%= link_to "修改密码", account_password_path %></li>
                       <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
                     </ul>
