--- a/app/views/knowledges/_knowledge_item.html.erb
+++ b/app/views/knowledges/_knowledge_item.html.erb
@@ -5,6 +5,8 @@
     <% else %>
       <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
     <% end %>
-    <p><%= link_to(knowledge.title, knowledge_path(knowledge)) %></p>
+    <p>
+      <%= link_to(knowledge.title, knowledge_path(knowledge)) %>
+    </p>
   <% end %>
 </div>
