--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,18 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+
   </head>
 
   <body>
-      <div class="container-fluid">
-          <%= render "common/navbar" %>
-          <%= render "common/flashes" %>
-          <%= yield %>
-      </div>
-      <%= render "common/footer" %>
+    <div class="container-fluid">
+        <%= render "common/navbar" %>
+        <%= render "common/flashes" %>
+        <%= yield %>
+    </div>
+    <%= render "common/footer" %>
+
+    <%= javascript_include_tag 'application' %>
+    <%= yield :page_javascript %>
   </body>
 </html>
