--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <h3><%= @knowledge.title %></h3>
   <small>--<%= @knowledge.subtitle %></small>
-  <div class="raty"></div>
+  <div class="rate">
+    <div class="raty" data-score="<%= @knowledge.find_score(current_user).try(:score) || 0 %>" data-score-url="<%= rate_knowledge_path(@knowledge) %>"></div><span class="average-score"><%= @knowledge.average_score %></span>
+  </div>
   <hr>
   <% @knowledge.photos.each do |photo| %>
     <%= image_tag(photo.image.thumb.url) %>
@@ -14,6 +16,21 @@
 
 <%= content_for :page_javascript do %>
   <script>
-    $(".raty").raty( { path: '/images/' } );
+   $(".raty").raty({
+     path: '/images/',
+     score: function() { return $(this).data('score'); },
+     click: function(score) {
+       var that = this;
+       $.ajax({
+         url: $(this).data("score-url"),
+         method: "POST",
+         data: { score: score },
+         dataType: "json",
+         success: function(data){
+           $(that).closest(".rate").find(".average-score").html( data["average_score"] );
+         }
+       })
+     }
+   });
   </script>
 <% end %>
