--- a/app/views/admin/knowledges/_form.html.erb
+++ b/app/views/admin/knowledges/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for [:admin, @knowledge] do |f| %>
+
   <div class="group">
     <%= f.input :title, :label => "产品名称" %>
   </div>
@@ -34,6 +35,22 @@
   <div class="group">
     <%= f.input :notice, :label => "订阅须知", as: :ckeditor %>
   </div>
+
+  <div class="group">
+  <label for="category_id" class="col-sm-2 control-label">所属分类:</label>
+  <div class="col-sm-5">
+    <select name="knowledge[category_id]">
+      <option></option>
+      <% @root_categories.each do |category| %>
+        <optgroup label="<%= category.title %>"></optgroup>
+
+        <% category.children.each do |sub_category| %>
+          <option value="<%= sub_category.id %>" <%= @knowledge.category_id == sub_category.id ? 'selected' : '' %>><%= sub_category.title %></option>
+        <% end -%>
+      <% end -%>
+    </select>
+  </div>
+</div>
 
   <div class="form-actions">
     <%= f.submit "提交", class: "btn btn-primary" %>
