implement buyers information for knowledge

--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -1,12 +1,16 @@
 <span class="pull-right">
   <% if current_user && current_user.is_liker_of?(@knowledge) %>
     <label class="label label-success"> 已加入心愿单 </label>
-    (<small> <%= @knowledge.likers.count %>人想学 </small>)
-    <%#= link_to("移出", remove_knowledge_path(@knowledge), :method => :post, :class => "btn btn-default btn-xs") %>
   <% else %>
     <%= link_to("想学", add_knowledge_path(@knowledge), :method => :post, :class => "btn btn-default btn-xs") %>
   <% end %>
+  (<small> <%= @knowledge.likers.count %>人想学 </small>)
+  <% if current_user && !current_user.is_buyer_of?(@knowledge) %>
+    <%= link_to("学过", buy_knowledge_path(@knowledge), :method => :post, :class => "btn btn-default btn-xs") %>
+  <% end %>
+  (<small> <%= @knowledge.buyers.count %>人学过</small>)
 </span>
+
 <h3><%= @knowledge.title %></h3>
 <small>--<%= @knowledge.subtitle %></small>
 <hr>
