user can like/star/follow knowledge

--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -4,6 +4,11 @@
   <div class="rate">
     <div class="raty" data-score="<%= @knowledge.find_score(current_user).try(:score) || 0 %>" data-score-url="<%= rate_knowledge_path(@knowledge) %>"></div><span class="average-score"><%= @knowledge.average_score %></span>
   </div>
+
+    <%= render "like" %>
+    <%= render "star" %>
+    <%= render "follow" %>
+
   <hr>
   <% @knowledge.photos.each do |photo| %>
     <%= image_tag(photo.image.thumb.url) %>
