--- a/app/views/knowledges/_follow.html.erb
+++ b/app/views/knowledges/_follow.html.erb
@@ -1,5 +1,5 @@
 <div id="action-follow">
-  <% if current_user.find_action(:follow, target: @knowledge) %>
+  <% if current_user && current_user.find_action(:follow, target: @knowledge) %>
     <%= link_to unfollow_knowledge_path(@knowledge), :method => :post do %>
       <i class="fa fa-eye" id="action-follow-icon" aria-hidden="true"></i> 关注
     <% end %>
