--- a/app/views/knowledges/_buy.html.erb
+++ b/app/views/knowledges/_buy.html.erb
@@ -1,5 +1,5 @@
 <div id="action-buy">
-  <% if current_user.find_action(:buy, target: @knowledge) %>
+  <% if current_user && current_user.find_action(:buy, target: @knowledge) %>
     <%= link_to unbuy_knowledge_path(@knowledge), :method => :post do %>
       <i class="fa fa-bookmark" id="action-buy-icon" aria-hidden="true"></i> 学过
     <% end %>
