--- a/app/views/knowledges/_learn.html.erb
+++ b/app/views/knowledges/_learn.html.erb
@@ -1,5 +1,5 @@
 <div id="action-learn">
-  <% if current_user.find_action(:learn, target: @knowledge) %>
+<% if current_user && current_user.find_action(:learn, target: @knowledge) %>
     <%= link_to unlearn_knowledge_path(@knowledge), :method => :post do %>
       <i class="fa fa-shopping-cart" id="action-learn-icon" aria-hidden="true"></i> 想学
     <% end %>
