--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -27,20 +27,20 @@
     <% @knowledge.reviews.each do |review| %>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <%= review.user.username %> 发表评测：《<%= review.title %>》
+          <%= review.user.username %> 发表评测：《<%= link_to(review.title, knowledge_review_path(@knowledge, review)) %>》
           <a href="#">
             <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
           </a> <!-- 待补充 -->
         </div>
         <div class="panel-body">
-          <% if review.user == current_user %>
+          <% if current_user && review.user == current_user %>
             <%= link_to("edit", edit_knowledge_review_path(@knowledge, review), class: "btn btn-warning btn-xs pull-right") %>
             <%= link_to("delete", knowledge_review_path(@knowledge, review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
           <% end %>
           <%= simple_format(review.content) %>
         </div>
       </div>
-    <% end %>
+    <% end -%>
   </div>
 </div>
 
