--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,15 +1,18 @@
-<h2>发表评测</h2>
+<div class="container">
+  <h2>发表评测</h2>
 
-<%= simple_form_for [@knowledge, @review] do |f| %>
-  <div class="group">
-    <%= f.input :title, :label => "标题" %>
-  </div>
+  <%= simple_form_for [@knowledge, @review] do |f| %>
+    <div class="group">
+      <%= f.input :title, :label => "标题" %>
+    </div>
 
-  <div class="group">
-    <%= f.input :content, :label => "评测内容",  as: :ckeditor  %>
-  </div>
+    <div class="group">
+      <%= f.input :content, :label => "评测内容",  as: :ckeditor  %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.submit "发表评测", class: "btn btn-primary" %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= f.submit "发表评测", class: "btn btn-primary" %>
+    </div>
+  <% end %>
+
+</div>
