--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -21,7 +21,32 @@
   <p>适宜人群: <br><%= sanitize @knowledge.appropriate %> </p>
   <p>订阅须知: <br><%= sanitize @knowledge.notice %> </p>
   <hr>
+
+  <div class="section-discussion">
+    <h3>共有 <%= @knowledge.reviews_count %> 条讨论</h3>
+    <%= link_to("参与讨论", new_knowledge_discussion_path(@knowledge), class: "btn btn-default") %>
+    <hr>
+    <% @knowledge.discussions.each do |discussion| %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <%= discussion.user.username %> :
+          <a href="#">
+            <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
+          </a> <!-- 待补充 -->
+        </div>
+        <div class="panel-body">
+          <% if current_user && discussion.user == current_user %>
+            <%= link_to("edit", edit_knowledge_discussion_path(@knowledge, discussion), class: "btn btn-warning btn-xs pull-right") %>
+            <%= link_to("delete", knowledge_discussion_path(@knowledge, discussion), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
+          <% end %>
+          <%= simple_format(discussion.content) %>
+        </div>
+      </div>
+    <% end -%>
+  </div>
+
   <div class="section-review">
+    <h3>共有 <%= @knowledge.reviews_count %> 篇评测</h3>
     <%= link_to("写评测", new_knowledge_review_path(@knowledge), class: "btn btn-default") %>
     <hr>
     <% @knowledge.reviews.each do |review| %>
