--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -12,6 +12,19 @@
                 <%= link_to("所有产品", knowledges_path) %>
               </li>
             </ul>
+            <div class="navbar-form navbar-left">
+              <%= form_tag search_knowledges_path , :method => :get  do %>
+              <div class="input-group" id="search-id" >
+                <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
+                <div class="input-group-btn">
+                  <button class="btn btn-default" type="submit">
+                    <i class="glyphicon glyphicon-search"></i>
+                  </button>
+                </div>
+
+              </div>
+              <% end %>
+            </div>
             <ul class="nav navbar-nav navbar-right">
               <% unless logged_in? %>
                 <li><%= link_to("注册", new_user_path)%></li>
