--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,54 +1,42 @@
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">KnewMark </a>
-        </div>
+<div class="navbar-wrap">
+  <div class="navbar">
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li>
-                <%= link_to("所有产品", knowledges_path) %>
-              </li>
-            </ul>
-            <div class="navbar-form navbar-left">
-              <%= form_tag search_knowledges_path , :method => :get  do %>
-              <div class="input-group" id="search-id" >
-                <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                  </button>
-                </div>
+    <div class="navbar-left">
+      <a class="navbar-brand" href="/">KnewMark </a>
 
-              </div>
-              <% end %>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-              <% unless logged_in? %>
-                <li><%= link_to("注册", new_user_path)%></li>
-                <li><%= link_to("登入", new_session_path) %></li>
-              <% else %>
-              <li><a>Hi!, <%= current_user.username %></a></li>
-              <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        个人中心
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <% if current_user.admin? %>
-                      <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
-                      <% end %>
-                      <li> <%= link_to "心愿单", account_knowledges_path %></li>
-                      <li> <%= link_to "修改密码", account_password_path %></li>
-                      <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
-                    </ul>
-                  </li>
-              <% end %>
-            </ul>
+      <div class="navbar-form">
+        <%= form_tag search_knowledges_path , :method => :get  do %>
+        <div class="input-group" id="search-id" >
+          <input type="text" class="search-input" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
+          <div class="input-group-btn">
+            <button class="search-button" type="submit">
+              <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </div>
         </div>
-        <!-- /.navbar-collapse -->
+        <% end %>
+      </div>
     </div>
-    <!-- /.container-fluid -->
-</nav>
+
+    <ul class="navbar-list">
+      <% unless logged_in? %>
+        <li class="navbar-listItem"><%= link_to("注册", new_user_path)%></li>
+        <li class="navbar-listItem"><%= link_to("登入", new_session_path) %></li>
+      <% else %>
+      <li class="navbar-listItem">Hi!, <%= current_user.username %></li>
+      <li class="navbar-listItem dropdown">
+        <a class="navbar-listItem dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <% if current_user.admin? %>
+          <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
+          <% end %>
+          <li> <%= link_to "心愿单", account_knowledges_path %></li>
+          <li> <%= link_to "修改密码", account_password_path %></li>
+          <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
+        </ul>
+          </li>
+      <% end %>
+    </ul>
+
+  </div>
+</div>
