--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,23 +1,42 @@
+
 <div class="container">
-  <div class="container">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <%= @review.user.username %> 发表评测：《<%= link_to(@review.title, knowledge_review_path(@knowledge, @review)) %>》
-        <a href="#">
-          <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
-        </a> <!-- 待补充 -->
-      </div>
-      <div class="panel-body">
-        <% if current_user && @review.user == current_user %>
-          <%= link_to("edit", edit_knowledge_review_path(@knowledge, @review), class: "btn btn-warning btn-xs pull-right") %>
-          <%= link_to("delete", knowledge_review_path(@knowledge, @review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
-        <% end %>
-        <%= simple_format(@review.content) %>
-      </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <%= @review.user.username %> 发表评测：《<%= link_to(@review.title, review_path(@review)) %>》
+      <a href="#">
+        <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
+      </a> <!-- 待补充 -->
     </div>
+    <div class="panel-body">
+      <% if current_user && @review.user == current_user %>
+        <%= link_to("edit", edit_knowledge_review_path(@review.knowledge, @review), class: "btn btn-warning btn-xs pull-right") %>
+        <%= link_to("delete", knowledge_review_path(@review.knowledge, @review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
+      <% end %>
+      <%= simple_format(@review.content) %>
+    </div>
+  </div>
 
-    <%= link_to("<- 返回知识页面", knowledge_path(@knowledge)) %>
+  <%= link_to("<- 返回知识 #{@review.knowledge.title} 页面", knowledge_path(@review.knowledge)) %>
 
+  <hr>
+  <div class="add-comment">
+    <%#= link_to("发表评论", new_review_comment_path(@review), class:"btn btn-default", remote: true) %>
+    <%= simple_form_for [ @review, @comment ], remote: true do |f| %>
+      <div class="form-group">
+        <%= f.input :content, class: "from-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "回复", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
+  <hr>
+
+  <h4 id="comment-count">共有 <%= @review.comments_count %> 条评论</h4>
+  <div id="comment-list">
+    <% @comments.each do |comment| %>
+      <%= render :partial => "comments/comment", :locals => { :review => @review, :comment => comment } %>
+    <% end %>
   </div>
 
 </div>
