--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,21 @@
 <div id="comment-<%= comment.id %>" class="panel panel-default">
   <div class="panel-heading">
     <%= comment.user.username %>
+    <div style="float:right">
+      <% if current_user && current_user.find_action(:like, target: review) %>
+        <span id="comment-<%= comment.id %>-like">
+          <%= link_to unlike_comment_path(comment), method: :post, remote: true do  %>
+            <i class="fa fa-heart" aria-hidden="true"></i>(<%= comment.reload.likes_count %>)
+          <% end %>
+        </span>
+      <% else %>
+        <span id="comment-<%= comment.id %>-like">
+          <%= link_to like_comment_path(comment), method: :post, remote: true do  %>
+            <i class="fa fa-heart-o" aria-hidden="true"></i>(<%= comment.reload.likes_count %>)
+          <% end %>
+        </span>
+      <% end %>
+    </div>
   </div>
   <div class="panel-body">
     <%= comment.content %>
