--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -36,9 +36,11 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <%= discussion.user.username %> :
-          <a href="#">
-            <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
-          </a> <!-- 待补充 -->
+
+          <div style="float:right">
+            <%= render :partial => "discussions/like", :locals => { :discussion => discussion } %>
+          </div>
+
         </div>
         <div class="panel-body">
           <% if current_user && discussion.user == current_user %>
@@ -60,10 +62,7 @@
         <div class="panel-heading">
           <%= review.user.username %> 发表评测：《<%= link_to(review.title, review_path(review)) %>》
           <div style="float:right">
-            <a href="#">
-              <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span> |
-            </a> <!-- 待补充 -->
-            <a href="<%= review_path(review) %>#comment-list">评论(<%= review.comments_count %>)</a>
+            <%= render :partial => "reviews/like", :locals => { :review => review } %>
           </div>
         </div>
         <div class="panel-body">
