--- a/app/views/knowledges/_like.html.erb
+++ b/app/views/knowledges/_like.html.erb
@@ -1,12 +1,12 @@
-<div id="action-like">
+<span id="knowledge-<%= @knowledge.id %>-like">
   <% if current_user && current_user.find_action(:like, target: @knowledge) %>
-    <%= link_to unlike_knowledge_path(@knowledge), :method => :post do %>
-      <i class="fa fa-heart" id="action-like-icon" aria-hidden="true"></i> 喜欢
+    <%= link_to unlike_knowledge_path(@knowledge), :method => :post, remote:true do %>
+      <i class="fa fa-heart" aria-hidden="true"></i> 喜欢
     <% end %>
   <% else %>
-    <%= link_to like_knowledge_path(@knowledge), :method => :post do %>
-      <i class="fa fa-heart-o" id="action-like-icon" aria-hidden="true"></i> 喜欢
+    <%= link_to like_knowledge_path(@knowledge), :method => :post, remote:true do %>
+      <i class="fa fa-heart-o" aria-hidden="true"></i> 喜欢
     <% end %>
   <% end %>
   <span class="badge" id="action-like-count"><%= @knowledge.reload.likes_count %></span>
-</div>
+</span>
