--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,48 @@
-<div class="row">
-  <div class="col-lg-3">
-    <%= render 'shared/categories' %>
+<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+ </ol>
+ <div class="carousel-inner">
+    <div class="item active">
+     <a href="javascript:;">
+      <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1ffxw02au1rj31400go7wh.jpg">
+      <div class="carousel-caption"></div>
+     </a>
+    </div>
+    <div class="item">
+     <a href="javascript:;">
+      <img src="https://ws4.sinaimg.cn/large/006tNbRwgy1ffxw11t54jj31400gmkjl.jpg">
+      <div class="carousel-caption"></div>
+     </a>
+    </div>
+    <div class="item">
+     <a href="javascript:;">
+      <img src="https://ws2.sinaimg.cn/large/006tNbRwgy1ffxvybzl8nj31400gs7r1.jpg">
+      <div class="carousel-caption"></div>
+     </a>
+    </div>
   </div>
-  <div class="col-lg-9">
-    <ol class="breadcrumb">
-      <li class="active">Home</li>
-    </ol>
+</div>
+
+<div class="knowledge-wrap">
+  <div class="knowledge-part">
+    <div class="knowledge-category">
+      <h2>选课程</h2>
+
+
+      <div class="category-list">
+        <%= render 'shared/categories' %>
+      </div>
+    </div>
     <div class="pull-right">
       <%= link_to("推荐产品", new_knowledge_path, class: "btn btn-info btn-sm") %>
     </div>
-    <%= render 'shared/knowledges' %>
+
+    <div class="knowledge-list">
+      <%= render 'shared/knowledges' %>
+    </div>
   </div>
+
 </div>
