--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,34 +7,39 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <%= render "common/navbar" %>
+  <div class="container-fluid">
+    <%= render "common/admin_navbar" %>
     <%= render "common/flashes" %>
-    <%= form_tag search_admin_knowledges_path, :method => :get do %>
-      <div class="input-group">
-        <input type="text" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
-        <span>
-          <button type="submit">
-            <span class="glyphicon glyphicon-search"></span>
-          </button>
-        </span>
+    <div class="container">
+      <div class="admin_search">
+        <%= form_tag search_admin_knowledges_path, :method => :get do %>
+          <div>
+            <input type="text" class="admin_form_input" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
+            <span>
+              <button type="submit" class="search-button">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
+            </span>
+          </div>
+        <% end %>
       </div>
-    <% end %>
-    <div class="row">
-      <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
-          <li> <%= link_to("Subjects", admin_subjects_path) %> </li>
-          <li> <%= link_to("所有产品", admin_knowledges_path) %> </li>
-          <li> <%= link_to("分类管理", admin_categories_path) %> </li>          
-          <li> <%= link_to("已上线产品", admin_knowledges_path(:status => "by_published")) %> </li>
-          <li> <%= link_to("未上线产品", admin_knowledges_path(:status => "by_hidden")) %> </li>
-          <li> <%= link_to("未通过产品", admin_knowledges_path(:status => "by_failed")) %> </li>
-        </ul>
-      </div>
-      <div class="col-md-10">
-        <%= yield %>
+
+      <div class="row">
+        <div class="col-md-2">
+          <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
+            <li> <%= link_to("所有产品", admin_knowledges_path) %> </li>
+            <li> <%= link_to("分类管理", admin_categories_path) %> </li>
+            <li> <%= link_to("已上线产品", admin_knowledges_path(:status => "by_published")) %> </li>
+            <li> <%= link_to("未上线产品", admin_knowledges_path(:status => "by_hidden")) %> </li>
+            <li> <%= link_to("未通过产品", admin_knowledges_path(:status => "by_failed")) %> </li>
+          </ul>
+        </div>
+        <div class="col-md-10">
+          <%= yield %>
+        </div>
       </div>
     </div>
+
     <%= render "common/footer" %>
 
   </div>
