change the btn color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,6 +127,14 @@
   }
 }
 
+.knowledge-wrap {
+  .btn {
+    background-color: #B4C5B3;
+    border: none;
+    color: #171B1F;
+  }
+}
+
 //---------knowledge end  ---------
 //---------Category index end ---------
 
