--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="pull-right">
-      <%= link_to("推荐产品", new_knowledge_path, class: "btn btn-info btn-sm") %>
+      <%= link_to("推荐产品", new_knowledge_path, class: "btn") %>
     </div>
 
     <div class="knowledge-list">
