--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,6 +189,6 @@
     right: 0;
     outline: none;
   }
-  
-  //---------admin.html.erb  end ---------
+}
 
+  //---------admin.html.erb  end ---------
