--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -77,6 +77,29 @@
       </div>
     <% end -%>
   </div>
+
+  <div class="section-question">
+    <h3>共有 <%= @knowledge.questions_count %> 个问题</h3>
+    <%= link_to("提问题", new_knowledge_question_path(@knowledge), class: "btn btn-default") %>
+    <hr>
+    <% @knowledge.questions.each do |question| %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <%= question.user.username %> 提出问题：《<%= link_to(question.title, knowledge_question_path(@knowledge, question)) %>》
+          <a href="#">
+            <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
+          </a> <!-- 待补充 -->
+        </div>
+        <div class="panel-body">
+          <% if current_user && question.user == current_user %>
+            <%= link_to("edit", edit_knowledge_question_path(@knowledge, question), class: "btn btn-warning btn-xs pull-right") %>
+            <%= link_to("delete", knowledge_question_path(@knowledge, question), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
+          <% end %>
+          <%= sanitize question.description %>
+        </div>
+      </div>
+    <% end -%>
+  </div>
 </div>
 
 <%= content_for :page_javascript do %>
