--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-lg-3">
-    <%= render 'shared/categories' %>
+    <%#= render 'shared/categories' %>
   </div>
   <div class="col-lg-9">
     <ol class="breadcrumb">
       <li><a href="<%= root_path %>">Home</a></li>
-      <li class="active"><%= @category.parent.title %></li>
+      <!-- <li class="active"><%#= @category.parent.title %></li> -->
       <li class="active"><%= @category.title %></li>
     </ol>
     <h1><%= @category.title %></h1>
