--- a/app/views/knowledges/_form.html.erb
+++ b/app/views/knowledges/_form.html.erb
@@ -35,7 +35,12 @@
     <%= f.input :notice, :label => "订阅须知", as: :ckeditor %>
   </div>
 
-  <div class="group">
+  <div class="form-group">
+    <%= f.label :分类%>
+    <%= f.select :category_id, Category.all.map{ |c| [c.title, c.id] }, {}, :class => "form-control"%>
+  </div>
+
+  <!-- <div class="group">
   <label for="category_id" class="col-sm-2 control-label">所属分类:</label>
   <div class="col-sm-5">
     <select name="knowledge[category_id]">
@@ -49,7 +54,7 @@
       <% end -%>
     </select>
   </div>
-</div>
+</div> -->
 
   <div class="form-actions">
     <%= f.submit "提交", class: "btn btn-primary" %>
