--- a/app/views/admin/knowledges/_form.html.erb
+++ b/app/views/admin/knowledges/_form.html.erb
@@ -40,6 +40,10 @@
      <%= f.label :分类%>
      <%= f.select :category_id, Category.all.map{ |c| [c.title, c.id] }, {}, :class => "form-control"%>
    </div>
+
+    <div class="form-group">
+      <input type="text" name="knowledge[tags_string]" value="<%= @knowledge.tags.map(&:title).join(',') %>" /><small>标签以逗号分隔</small>
+    </div>
   <!-- <div class="group">
   <label for="category_id" class="col-sm-2 control-label">所属分类:</label>
   <div class="col-sm-5">
