--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,11 @@
  @import "social-share-button";
 
 
+a {
+  text-decoration: none !important;
+  font-style: normal;
+}
+
 //---------Others  ---------
  /* change social-share-button icon size */
 
