email.scss container wax-with

--- a/app/assets/stylesheets/email.scss
+++ b/app/assets/stylesheets/email.scss
@@ -45,7 +45,7 @@ body {
 
 .container {
   display: block !important;
-  max-width: 600px !important;
+  // max-width: 600px !important;
   margin: 0 auto !important;
   /* makes it centered */
   clear: both !important;
