--- a/app/views/common/_admin_navbar.html.erb
+++ b/app/views/common/_admin_navbar.html.erb
@@ -2,7 +2,8 @@
   <div class="navbar">
 
     <div class="navbar-left">
-      <a class="navbar-brand" href="/">KnewMark </a>
+      <a class="navbar-brand" href="/">KnewMark后台 </a>
+      <%= link_to('用户管理', admin_users_path) %>
 
     </div>
 
