--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,16 +1,33 @@
 <h1>用户后台管理</h1>
-
+<%= form_tag bulk_mail_admin_users_path, :class => "form-inline" do %>
 <table class="table">
 <tr>
+  <th><%= check_box_tag "全选", "1", false, :id => "toggle_all" %></th>
   <th>ID</th>
   <th>Email</th>
   <th>Actions</th>
 </tr>
 <% @users.each do |user| %>
   <tr>
+    <td>
+      <%= check_box_tag "ids[]", user.id %>
+    </td>
+
     <td><%= user.id %></td>
     <td><%= user.email %></td>
     <td><%= link_to "Edit", edit_admin_user_path(user), :class => "btn btn-default" %></td>
   </tr>
 <% end %>
 </table>
+
+ <p><%= submit_tag "批次发送邮件", :class => "btn btn-danger" %></p>
+<% end %>
+  <script>
+    $("#toggle_all").click(function(){
+      if ( $(this).prop("checked") ) {
+        $("input[name='ids[]']").prop("checked", true);
+      } else {
+        $("input[name='ids[]']").prop("checked", false);
+      }
+    })
+  </script>
