--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,8 +1,8 @@
 Hello, <%= @user.email %>
 ===============================================
 
-You have requested to reset your password.
+您要求重置密码
 
-To choose a new password, just follow this link:  <%= @url %>
+为了要重新设置你的密码，请点击以下链接修改<%= @url %>
 
-Have a great day!
+祝您生活愉快
