change ckeditor to simditor

--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -22,8 +22,8 @@
   <% end %>
   <hr>
   <p>产品介绍: <br><%= sanitize @knowledge.description %> </p>
-  <p>适宜人群: <br><%= sanitize @knowledge.appropriate %> </p>
-  <p>订阅须知: <br><%= sanitize @knowledge.notice %> </p>
+  <!-- <p>适宜人群: <br><%= sanitize @knowledge.appropriate %> </p>
+  <p>订阅须知: <br><%= sanitize @knowledge.notice %> </p> -->
   <p>标签: <br><% @knowledge.tags.each do |tag| %>
     <span class="badge"><%= tag.title %></span>
   <% end -%>
