--- a/app/views/admin/knowledges/_form.html.erb
+++ b/app/views/admin/knowledges/_form.html.erb
@@ -25,20 +25,20 @@
   </div>
 
   <div class="group">
-    <%= f.input :description, :label => "产品介绍", as: :ckeditor %>
+    <%= f.input :description, :label => "产品介绍" %>
+  </div>
+
+  <!-- <div class="group">
+    <%= f.input :appropriate, :label => "适宜人群" %>
   </div>
 
   <div class="group">
-    <%= f.input :appropriate, :label => "适宜人群", as: :ckeditor %>
-  </div>
-
-  <div class="group">
-    <%= f.input :notice, :label => "订阅须知", as: :ckeditor %>
-  </div>
+    <%= f.input :notice, :label => "订阅须知" %>
+  </div> -->
 
    <div class="form-group">
      <%= f.label :分类%>
-     <%= f.select :category_id, Category.all.map{ |c| [c.title, c.id] }, {}, :class => "form-control"%>
+     <%= f.select :category_id, Category.all.map{ |c| [c.title, c.id] }, {:include_blank => true}, :class => "form-control"%>
    </div>
 
     <div class="form-group">
@@ -64,3 +64,7 @@
     <%= f.submit "提交", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  var editor = new Simditor({ textarea: $('#knowledge_description'), toolbar: ['title', 'bold', 'italic', 'underline', 'strikethrough', 'color', '|', 'ol', 'ul', '|', 'markdown', 'blockquote', 'code', 'table', 'link','image', '|','hr', 'indent', 'outdent', 'alignment', '|', 'marked', 'mark'],  placeholder: '这里输入产品介绍(包括详情、适宜人群、订阅须知等)...', pasteImage: true, fileKey: 'file', upload: { url: '/photos', params: null, connectionCount: 3, leaveConfirm: 'Uploading is in progress, are you sure to leave this page?' } });
+</script>
