--- a/app/assets/stylesheets/knowledges.scss
+++ b/app/assets/stylesheets/knowledges.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the knowledges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.knowledge {
+  background-color: white;
+  margin-bottom: 30px;
+  img {
+    width: 100%;
+    // margin: 7.5px auto;
+  }
+  .knowledge-content {
+    padding-left: 10px;
+    text-align: left;
+    line-height: 14px;
+    height: 30px;
+    padding: none !important;
+    a {
+      color: black;
+    }
+  }
+  .knowledge-info {
+    display: block;
+    text-align: right;
+    font-size: 24px;
+    color: #F08080;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    small { font-size: 12px; }
+    .icon { padding-right: 5px; font-size: 24px;}
+  }
+  .thumbnail {
+    border: none !important;
+    padding: 0 !important;
+    display: block;
+    margin-bottom: 10px;
+    border-radius: 0;
+  }
+ }
