--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,15 @@
-<div class="row">
-  <div class="col-lg-3">
+<div class="page-content">
+  <div class="container">
     <%#= render 'shared/categories' %>
-  </div>
-  <div class="col-lg-9">
+
     <ol class="breadcrumb">
-      <li><a href="<%= root_path %>">Home</a></li>
+      <li><a href="<%= root_path %>">所有类别</a></li>
       <!-- <li class="active"><%#= @category.parent.title %></li> -->
       <li class="active"><%= @category.title %></li>
     </ol>
     <h1><%= @category.title %></h1>
+    <hr>
+    <%= render :partial => "knowledges/knowledge_item", :collection => @knowledges, :as => :knowledge %>
 
-    <%= render 'shared/knowledges' %>
   </div>
 </div>
