--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar-wrap container-fluid">
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -43,11 +43,19 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+
           <% unless logged_in? %>
             <li><%= link_to("注册", new_user_path)%></li>
             <li><%= link_to("登入", new_session_path) %></li>
           <% else %>
-
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to("推荐知识", new_knowledge_path) %></li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
               <ul class="dropdown-menu">
