--- a/app/views/knowledges/index.html.erb
+++ b/app/views/knowledges/index.html.erb
@@ -1,15 +1,44 @@
-<div class="container">
-  <div class="knowledge-wrap">
-    <div class="knowledge-category">
-
-    </div>
-    <div class="knowledge-part">
-      <div class="pull-right">
-        <%= link_to("推荐产品", new_knowledge_path, class: "btn btn-info btn-sm") %>
+<div class="page-content">
+  <div class="container">
+    <div class="knowledge-wrap">
+      <div class="knowledge-category">
       </div>
-      <h2>选课程</h2>
-      <br>
-      <%= render :partial => "knowledge_item", :collection => @knowledges, :as => :knowledge %>
+      <div class="knowledge-list" id="knowledge-list">
+        <!-- <div class="row"> -->
+          <%= render :partial => "knowledge_item", :collection => @knowledges, :as => :knowledge %>
+        <!-- </div> -->
+
+      </div>
     </div>
   </div>
 </div>
+
+<%= content_for :page_javascript do %>
+
+  <!-- <script>
+    $('.knowledge-list').masonry({
+    // options
+    itemSelector: '.knowledge',
+    columnWidth: 200
+    });
+  </script> -->
+
+  <script>
+    var current_knowledge_id = <%= @knowledges.last.id %>;
+
+    $(window).scroll(function(){
+      if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+        var url = "/knowledges?max_id=" + current_knowledge_id;
+        if (url) {
+          $.ajax({
+            method: "GET",
+            url: url,
+            dataType: "script"
+          })
+        } else {
+          console.log("data ended")
+        }
+      }
+    })
+  </script>
+<% end %>
