--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="page-content">
+
+  <div class="container">
   <div class="pull-right">
     <%= social_share_button_tag(@knowledge.title) %>
   </div>
@@ -27,7 +29,7 @@
   <p>标签: <br><% @knowledge.tags.each do |tag| %>
     <span class="badge"><%= tag.title %></span>
   <% end -%>
-</p>
+  </p>
   <hr>
 
   <div class="section-havelink">
@@ -107,8 +109,10 @@
       </div>
     <% end -%>
   </div>
+
 </div>
 
+</div>
 <%= content_for :page_javascript do %>
   <script>
    $(".raty").raty({
