--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="container" style="margin-top: 100px;">
+<footer class="container">
     <p class="text-center">©KnewMark
     </p>
 </footer>
