--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,77 +1,80 @@
-<div class="navbar-wrap container-fluid">
+<div class="navbar-wrap">
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">KnewMark </a>
-      </div>
+      <div class="row">
 
-      <div class="collapse navbar-collapse" id="navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li>
-            <div class="navbar-form navbar-left" role="search">
-              <%= form_tag search_knowledges_path , :method => :get  do %>
-                <div class="input-group" id="search-id" >
-                  <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
-                  <div class="input-group-btn">
-                    <button class="btn search-button" type="submit">
-                      <i class="glyphicon glyphicon-search"></i>
-                    </button>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">KnewMark </a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <div class="navbar-form navbar-left" role="search">
+                <%= form_tag search_knowledges_path , :method => :get  do %>
+                  <div class="input-group" id="search-id" >
+                    <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
+                    <div class="input-group-btn">
+                      <button class="btn search-button" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                      </button>
+                    </div>
                   </div>
-                </div>
-              <% end %>
-            </div>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              知识分类<span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <% Category.grouped_data.each do |g| %>
-                <li>
-                <a href="<%= category_path(g) %>"><%= g.first.title %></a>
-                </li>
-              <% end -%>
-            </ul>
-          </li>
-
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-
-          <% unless logged_in? %>
-            <li><%= link_to("注册", new_user_path)%></li>
-            <li><%= link_to("登入", new_session_path) %></li>
-          <% else %>
+                <% end %>
+              </div>
+            </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-plus" aria-hidden="true"></i>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                知识分类<span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to("推荐知识", new_knowledge_path) %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <% if current_user.admin? %>
-                <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
+                <% Category.grouped_data.each do |g| %>
+                  <li>
+                  <a href="<%= category_path(g) %>"><%= g.first.title %></a>
+                  </li>
                 <% end -%>
-                <li> <%= link_to "我的知识库", user_path(current_user) %></li>
-                <li> <%= link_to "修改密码", account_password_path %></li>
-                <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
               </ul>
             </li>
-          <% end -%>
-        </ul>
 
-      </div>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+
+            <% unless logged_in? %>
+              <li><%= link_to("注册", new_user_path)%></li>
+              <li><%= link_to("登入", new_session_path) %></li>
+            <% else %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <i class="fa fa-plus" aria-hidden="true"></i> 推荐知识
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to("填写推荐表", new_knowledge_path) %></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <% if current_user.admin? %>
+                  <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
+                  <% end -%>
+                  <li> <%= link_to "我的知识库", user_path(current_user) %></li>
+                  <li> <%= link_to "修改密码", account_password_path %></li>
+                  <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
+                </ul>
+              </li>
+            <% end -%>
+          </ul>
+
+        </div>
     </div>
 
+  </div>
   </nav>
 </div>
