--- a/app/views/knowledges/_like.html.erb
+++ b/app/views/knowledges/_like.html.erb
@@ -1,12 +1,13 @@
 <span id="knowledge-<%= @knowledge.id %>-like">
   <% if current_user && current_user.find_action(:like, target: @knowledge) %>
-    <%= link_to unlike_knowledge_path(@knowledge), :method => :post, remote:true do %>
-      <i class="fa fa-heart" aria-hidden="true"></i> 喜欢
+    <%= link_to unlike_knowledge_path(@knowledge), :method => :post, remote:true, class: "liked" do %>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
+      <p><%= @knowledge.reload.likes_count %> <small>喜欢</small></p>
     <% end %>
   <% else %>
     <%= link_to like_knowledge_path(@knowledge), :method => :post, remote:true do %>
-      <i class="fa fa-heart-o" aria-hidden="true"></i> 喜欢
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
+      <p><%= @knowledge.reload.likes_count %> <small>喜欢</small></p>
     <% end %>
   <% end %>
-  <span class="badge" id="action-like-count"><%= @knowledge.reload.likes_count %></span>
 </span>
