--- a/app/views/knowledges/_sidebar.html.erb
+++ b/app/views/knowledges/_sidebar.html.erb
@@ -28,5 +28,5 @@
 </div>
 
 <div class="to-buy">
-  <%= link_to('购买方式','#', class: "btn btn-warning") %>
+  <%= link_to('购买方式','#', class: "btn btn-warning disabled") %>
 </div>
