--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -19,13 +19,13 @@
               <a href="#">知识详情</a>
             </li>
             <li role="presentation" id="knowledge-review">
-              <a href="#">评测 <span class="counter"><%= @knowledge.reviews_count %></span></a>
+              <a href="<%= knowledge_reviews_path(@knowledge) %>">评测 <span class="counter"><%= @knowledge.reviews_count %></span></a>
             </li>
             <li role="presentation" id="knowledge-discussion">
-              <a href="#">讨论 <span class="counter"><%= @knowledge.discussions_count %></span></a>
+              <a href="<%= knowledge_discussions_path(@knowledge) %>">讨论 <span class="counter"><%= @knowledge.discussions_count %></span></a>
             </li>
             <li role="presentation" id="knowledge-question">
-              <a href="#">问题 <span class="counter"><%= @knowledge.questions_count %></span></a>
+              <a href="<%= knowledge_questions_path(@knowledge) %>">问题 <span class="counter"><%= @knowledge.questions_count %></span></a>
             </li>
           </ul>
         </section>
