--- a/app/assets/stylesheets/knowledges.scss
+++ b/app/assets/stylesheets/knowledges.scss
@@ -174,7 +174,7 @@ main {
   border-top: 1px dashed #eee;
 }
 
-.discussions-list, .reviews-list {
+.discussions-list, .reviews-list, .questions-list {
   margin-top: 20px;
 }
 
