reviews/discussion/question index page

--- a/app/views/knowledges/_sidebar.html.erb
+++ b/app/views/knowledges/_sidebar.html.erb
@@ -6,19 +6,19 @@
     不同的颜色用一个 class 来控制 -->
 
     <li class="like">
-      <%= render "like" %>
+      <%= render "knowledges/like" %>
     </li>
 
     <li class="want">
-      <%= render "want" %>
+      <%= render "knowledges/want" %>
     </li>
 
     <li class="have">
-      <%= render "have" %>
+      <%= render "knowledges/have" %>
     </li>
 
     <li class="follow">
-      <%= render "follow" %>
+      <%= render "knowledges/follow" %>
     </li>
   </ul>
 </div>
