--- a/app/assets/stylesheets/knowledges.scss
+++ b/app/assets/stylesheets/knowledges.scss
@@ -170,8 +170,8 @@ main {
   }
 }
 
-.knowledge-discussion, .knowledge-review, .knowledge-question {
-  border-top: 1px dashed #eee;
+.knowledge-info, .knowledge-discussion, .knowledge-review, .knowledge-question {
+  border-bottom: 1px dashed #eee;
 }
 
 .discussions-list, .reviews-list, .questions-list {
