--- a/app/views/knowledges/show.html.erb
+++ b/app/views/knowledges/show.html.erb
@@ -3,32 +3,7 @@
     <div class="row">
       <main class="col-md-9">
 
-        <section class="heading">
-          <h3><%= @knowledge.title %></h3>
-          <small><%= @knowledge.subtitle %></small>
-        </section>
-
-        <section class="rate">
-          <div class="raty" data-score="<%= @knowledge.find_score(current_user).try(:score) || 0 %>" data-score-url="<%= rate_knowledge_path(@knowledge) %>"></div>
-          <span class="average-score"><%= @knowledge.average_score %></span>
-        </section>
-
-        <section class="menu">
-          <ul class="nav nav-tabs nav-justified">
-            <li role="presentation" id="knowledge-info">
-              <a href="#">知识详情</a>
-            </li>
-            <li role="presentation" id="knowledge-review">
-              <a href="<%= knowledge_reviews_path(@knowledge) %>">评测 <span class="counter"><%= @knowledge.reviews_count %></span></a>
-            </li>
-            <li role="presentation" id="knowledge-discussion">
-              <a href="<%= knowledge_discussions_path(@knowledge) %>">讨论 <span class="counter"><%= @knowledge.discussions_count %></span></a>
-            </li>
-            <li role="presentation" id="knowledge-question">
-              <a href="<%= knowledge_questions_path(@knowledge) %>">问题 <span class="counter"><%= @knowledge.questions_count %></span></a>
-            </li>
-          </ul>
-        </section>
+        <%= render 'knowledges/show_header' %>
 
         <!-- <section>
           <%#= render "star" %>
@@ -49,6 +24,33 @@
               <span class="badge"><%= tag.title %></span>
             <% end -%>
           </p>
+        </section>
+
+        <section class="knowledge-review">
+          <p class="knowledge_counter">共有 <%= @knowledge.reviews_count %> 篇评测</p>
+          <%= link_to("写评测", new_knowledge_review_path(@knowledge), class: "btn btn-default") %>
+          <div class="reviews-list">
+            <% @reviews.each do |review| %>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <%= link_to review.user.username, user_path(review.user) %> 发表评测：《<%= link_to(review.title, review_path(review)) %>》
+                  <div style="float:right">
+                    <%= render :partial => "reviews/like", :locals => { :review => review } %>
+                  </div>
+                </div>
+                <div class="panel-body">
+                  <% if current_user && review.user == current_user %>
+                    <%= link_to("edit", edit_knowledge_review_path(@knowledge, review), class: "btn btn-warning btn-xs pull-right") %>
+                    <%= link_to("delete", knowledge_review_path(@knowledge, review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
+                  <% end %>
+                  <%= simple_format(review.content) %>
+                </div>
+              </div>
+            <% end -%>
+            <div class="section-footer">
+              <%= link_to "更多评测...", knowledge_reviews_path(@knowledge) %>
+            </div>
+          </div>
         </section>
 
         <section class="knowledge-discussion">
@@ -81,33 +83,6 @@
 
         </section>
 
-        <section class="knowledge-review">
-          <p class="knowledge_counter">共有 <%= @knowledge.reviews_count %> 篇评测</p>
-          <%= link_to("写评测", new_knowledge_review_path(@knowledge), class: "btn btn-default") %>
-          <div class="reviews-list">
-            <% @reviews.each do |review| %>
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <%= link_to review.user.username, user_path(review.user) %> 发表评测：《<%= link_to(review.title, review_path(review)) %>》
-                  <div style="float:right">
-                    <%= render :partial => "reviews/like", :locals => { :review => review } %>
-                  </div>
-                </div>
-                <div class="panel-body">
-                  <% if current_user && review.user == current_user %>
-                    <%= link_to("edit", edit_knowledge_review_path(@knowledge, review), class: "btn btn-warning btn-xs pull-right") %>
-                    <%= link_to("delete", knowledge_review_path(@knowledge, review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
-                  <% end %>
-                  <%= simple_format(review.content) %>
-                </div>
-              </div>
-            <% end -%>
-            <div class="section-footer">
-              <%= link_to "更多评测...", knowledge_reviews_path(@knowledge) %>
-            </div>
-          </div>
-        </section>
-
         <section class="knowledge-question">
           <p class="knowledge_counter">共有 <%= @knowledge.questions_count %> 个问题</p>
           <%= link_to("提问题", new_knowledge_question_path(@knowledge), class: "btn btn-default") %>
@@ -137,9 +112,7 @@
           </div>
         </section>
 
-        <section class="footer text-center">
-          <small>今天，你学习了吗？</small>
-        </section>
+        <%= render 'knowledges/show_footer' %>
 
       </main>
 
